--- a/style.css
+++ b/style.css
@@ -231,3 +231,71 @@ body {
   gap: 15px;
   font-size: 20px;
 }
+
+.settings {
+  width: 63px;
+  height: 63px;
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  background-color: rgba(60, 60, 70, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.settings img {
+  width: 45%;
+}
+
+.settings:hover {
+  background-color: rgb(70, 70, 80);
+}
+
+.modal-background {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+  background-color: rgba(30, 30, 40, 0.8);
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: rgb(50, 50, 60);
+  border-radius: 15px;
+  height: 300px;
+  width: 300px;
+  padding: 30px 40px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 15px rgb(30, 30, 40);
+}
+
+.modal-title {
+  color: white;
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+
+.option {
+  color: white;
+  font-size: 20px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.option input, .option label {
+  cursor: pointer;
+}
